<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	android:id="@+id/linearLayout4"
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:gravity="center"
	android:padding="30dip"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	
	
	<ImageView 
		android:layout_height="wrap_content"
		android:layout_width="wrap_content" 
		android:id="@+id/imageAnimationForB2R"
		android:adjustViewBounds="true" />
	
<!--
    <SeekBar
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
    	android:max="100"
    	android:progress="0"
    	android:id="@+id/breathCountProgressBar"/>
-->	
    			
	<TableLayout
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:gravity="bottom"
		android:layout_margin="2dip"
		android:layout_gravity="center_horizontal|bottom"
		android:stretchColumns="*" >
		<TableRow>
 			<TextView
 				android:layout_width="fill_parent"
 				android:layout_height="wrap_content"
 				android:text="@string/breath_duration_intake">
 			</TextView>
 			<TextView
 				android:id="@+id/remainingSecondsExhale"
 				android:layout_width="fill_parent"
 				android:layout_height="wrap_content"
 				android:text="3">
 			</TextView>
 			<TextView
 				android:layout_width="fill_parent"
 				android:layout_height="wrap_content"
 				android:text="Seconds remaining">
 			</TextView>
		</TableRow>
		</TableLayout>
		<RelativeLayout
    		android:layout_width="wrap_content"
  			android:layout_height="fill_parent"
  			android:gravity="bottom" > 	
			<TableLayout
				android:layout_height="wrap_content"
				android:layout_width="fill_parent"
				android:stretchColumns="*" >
			<TableRow>
 				<Button
 					android:id="@+id/decreaseExhaleButtonB2R"
 					style="?android:attr/buttonStyleSmall"
                	android:layout_width="0px"
               	 	android:layout_weight="1"
                	android:layout_height="wrap_content"
                	android:layout_marginRight="3dip"
 					android:text="@string/buttonShorten" />
 				<Button
 					android:id="@+id/pauseExhaleButtonB2R"
 					style="?android:attr/buttonStyleSmall"
                	android:layout_width="0px"
                	android:layout_weight="1"
                	android:layout_height="wrap_content"
                	android:layout_marginRight="3dip"
 					android:text="@string/buttonPause" />
 				<Button
 					android:id="@+id/increaseExhaleButtonB2R"
 					style="?android:attr/buttonStyleSmall"
                	android:layout_width="0px"
                	android:layout_weight="1"
                	android:layout_height="wrap_content"
                	android:layout_marginRight="3dip"
 					android:text="@string/buttonLengthen" />
 			</TableRow>
		</TableLayout>
	</RelativeLayout>
</LinearLayout>	
